Selection of Regression technique

--- a/HeartDiseasePrediction.ipynb
+++ b/HeartDiseasePrediction.ipynb
@@ -1062,9 +1062,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11e32e11",
+   "metadata": {},
+   "source": [
+    "# The Best Regression technique can be used here is Logistic Regression. As its one of the best to work with binary classification."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b5b6324",
+   "id": "8fdb8d8f",
    "metadata": {},
    "outputs": [],
    "source": []
